@startuml
class ButtonGameObject extends GameObject {
    +onClicked: Event<void>
    #onEnable(): void
}
class FretGameObject extends GameObject {
    #onEnable(): void
}
class FretHandleGameObject extends GameObject {
    +fretLogicBehaviors: FretLogicBehavior[]
    #onEnable(): void
}
class RoadGameObject extends GameObject {
    #onEnable(): void
}
class NoteGameObject extends GameObject {
    +associatedNote: Note
    +wasProcessed: boolean
    #onEnable(): void
    +enableRendering(): void
    +disableRendering(): void
}
class ScoreTextsGameObject extends GameObject {
    #onEnable(): void
    #onDisable(): void
}
class GameLogicGameObject extends GameObject {
    #onEnable(): void
    +loadGame(selectedSong: string): Promise<void>
}
class GizmoGameObject extends GameObject {
    #onEnable(): void
}
class SongGameObject extends GameObject {
    +onSelected: Event<string>
    #onEnable(): void
}
class SongSelectionGameObject extends GameObject {
    +onSongSelected: Event<string>
    #onEnable(): void
}
FretGameObject --> "1" Fret
FretHandleGameObject --> "*" FretLogicBehavior
Mode --> "*" Note
NoteGameObject --> "1" Note
NotesManagerLogicBehavior --> "1" NoteGameObject
NotesManagerLogicBehavior --> "*" FretLogicBehavior
NotesManagerLogicBehavior --> "*" NoteGameObject
ScoreLogicBehavior --> "1" NoteGameObject
FretVisualFeedbackSpawnerLogicBehavior --> "1" NoteGameObject
ScoreTextsGameObject --> "1" ScoreLogicBehavior
Chart --> "*" Mode
MidiParser --> "*" Note
ChartParser --> "*" Mode
ChartParser --> "*" Note
@enduml